--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "prettier": "^2.0.4",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.8.3"
   }
 }
