--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,11 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "baseUrl": ".",
+    "paths": {
+      "#root/*": ["./*"]
+    }
   },
   "exclude": [
     "node_modules"
