--- a/package.json
+++ b/package.json
@@ -13,13 +13,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "next": "^9.3.4",
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
+    "@reduxjs/toolkit": "^1.3.4",
+    "ky": "^0.19.1",
+    "ky-universal": "^0.5.0",
+    "next": "^9.3.5",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0"
   },
   "devDependencies": {
     "@types/node": "^13.11.1",
     "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
+    "@types/react-redux": "^7.1.7",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "eslint": "^6.8.0",
