--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/babel-preset-css-prop": "^10.0.27",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "@reduxjs/toolkit": "^1.3.4",
+    "emotion-theming": "^10.0.27",
     "ky": "^0.19.1",
     "ky-universal": "^0.5.0",
     "next": "^9.3.5",
