--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@reduxjs/toolkit": "^1.3.4",
     "emotion-theming": "^10.0.27",
     "final-form": "^4.19.1",
+    "final-form-arrays": "^3.0.2",
     "ky": "^0.19.1",
     "ky-universal": "^0.5.0",
     "next": "^9.3.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-final-form": "^6.4.0",
+    "react-final-form-arrays": "^3.1.1",
     "react-redux": "^7.2.0",
     "yup": "^0.28.4"
   },
