--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ky": "^0.19.1",
     "ky-universal": "^0.5.0",
     "next": "^9.3.5",
+    "nookies": "^2.2.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-final-form": "^6.4.0",
