--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ky-universal": "^0.5.0",
     "next": "^9.3.5",
     "nookies": "^2.2.4",
+    "polished": "^3.6.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-final-form": "^6.4.0",
