--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-final-form": "^6.4.0",
     "react-final-form-arrays": "^3.1.1",
     "react-redux": "^7.2.0",
+    "react-toastify": "^6.1.0",
     "yup": "^0.28.4"
   },
   "devDependencies": {
